seaqt/QtWidgets/gen_qlcdnumber.h

class QEvent;
class QLCDNumber;
class QMetaObject;
class QPaintEvent;
class QSize;
class QStyleOptionFrame;
class QWidget;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QLCDNumber QLCDNumber;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QLCDNumber_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QLCDNumber_override_virtual_metric(void* self, intptr_t slot);
int QLCDNumber_virtualbase_metric(const void* self, int param1);
bool QLCDNumber_override_virtual_initPainter(void* self, intptr_t slot);
void QLCDNumber_virtualbase_initPainter(const void* self, QPainter* painter);
bool QLCDNumber_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QLCDNumber_virtualbase_redirected(const void* self, QPoint* offset);
bool QLCDNumber_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QLCDNumber_virtualbase_sharedPainter(const void* self);
bool QLCDNumber_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QLCDNumber_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QLCDNumber_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QLCDNumber_virtualbase_inputMethodQuery(const void* self, int param1);
bool QLCDNumber_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QLCDNumber_virtualbase_focusNextPrevChild(void* self, bool next);
bool QLCDNumber_override_virtual_eventFilter(void* self, intptr_t slot);
bool QLCDNumber_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QLCDNumber_override_virtual_timerEvent(void* self, intptr_t slot);
void QLCDNumber_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QLCDNumber_override_virtual_childEvent(void* self, intptr_t slot);
void QLCDNumber_virtualbase_childEvent(void* self, QChildEvent* event);
bool QLCDNumber_override_virtual_customEvent(void* self, intptr_t slot);
void QLCDNumber_virtualbase_customEvent(void* self, QEvent* event);
bool QLCDNumber_override_virtual_connectNotify(void* self, intptr_t slot);
void QLCDNumber_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QLCDNumber_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QLCDNumber_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QLCDNumber_delete(QLCDNumber* self);