seaqt/QtWidgets/gen_qlcdnumber.nim

proc fcQLCDNumber_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_nativeEvent".}
proc fQLCDNumber_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QLCDNumber_virtualbase_metric".}
proc fcQLCDNumber_override_virtual_metric(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_metric".}
proc fQLCDNumber_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QLCDNumber_virtualbase_initPainter".}
proc fcQLCDNumber_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_initPainter".}
proc fQLCDNumber_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QLCDNumber_virtualbase_redirected".}
proc fcQLCDNumber_override_virtual_redirected(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_redirected".}
proc fQLCDNumber_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QLCDNumber_virtualbase_sharedPainter".}
proc fcQLCDNumber_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_sharedPainter".}
proc fQLCDNumber_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QLCDNumber_virtualbase_inputMethodEvent".}
proc fcQLCDNumber_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_inputMethodEvent".}
proc fQLCDNumber_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QLCDNumber_virtualbase_inputMethodQuery".}
proc fcQLCDNumber_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_inputMethodQuery".}
proc fQLCDNumber_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QLCDNumber_virtualbase_focusNextPrevChild".}
proc fcQLCDNumber_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_focusNextPrevChild".}
proc fQLCDNumber_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QLCDNumber_virtualbase_eventFilter".}
proc fcQLCDNumber_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_eventFilter".}
proc fQLCDNumber_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_timerEvent".}
proc fcQLCDNumber_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_timerEvent".}
proc fQLCDNumber_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_childEvent".}
proc fcQLCDNumber_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_childEvent".}
proc fQLCDNumber_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_customEvent".}
proc fcQLCDNumber_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_customEvent".}
proc fQLCDNumber_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QLCDNumber_virtualbase_connectNotify".}
proc fcQLCDNumber_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_connectNotify".}
proc fQLCDNumber_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QLCDNumber_virtualbase_disconnectNotify".}
proc fcQLCDNumber_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_disconnectNotify".}
proc fcQLCDNumber_delete(self: pointer) {.importc: "QLCDNumber_delete".}


func init*(T: type gen_qlcdnumber_types.QLCDNumber, h: ptr cQLCDNumber): gen_qlcdnumber_types.QLCDNumber =
  T(h: h)
proc create*(T: type gen_qlcdnumber_types.QLCDNumber, parent: gen_qwidget_types.QWidget): gen_qlcdnumber_types.QLCDNumber =
  gen_qlcdnumber_types.QLCDNumber.init(fcQLCDNumber_new(parent.h))

proc create*(T: type gen_qlcdnumber_types.QLCDNumber, ): gen_qlcdnumber_types.QLCDNumber =
  gen_qlcdnumber_types.QLCDNumber.init(fcQLCDNumber_new2())

proc create*(T: type gen_qlcdnumber_types.QLCDNumber, numDigits: cuint): gen_qlcdnumber_types.QLCDNumber =
  gen_qlcdnumber_types.QLCDNumber.init(fcQLCDNumber_new3(numDigits))

proc create*(T: type gen_qlcdnumber_types.QLCDNumber, numDigits: cuint, parent: gen_qwidget_types.QWidget): gen_qlcdnumber_types.QLCDNumber =
  gen_qlcdnumber_types.QLCDNumber.init(fcQLCDNumber_new4(numDigits, parent.h))

proc metaObject*(self: gen_qlcdnumber_types.QLCDNumber, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQLCDNumber_metaObject(self.h))

proc metacast*(self: gen_qlcdnumber_types.QLCDNumber, param1: cstring): pointer =
  fcQLCDNumber_metacast(self.h, param1)

proc tr*(_: type gen_qlcdnumber_types.QLCDNumber, s: cstring): string =
  let v_ms = fcQLCDNumber_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc smallDecimalPoint*(self: gen_qlcdnumber_types.QLCDNumber, ): bool =
  fcQLCDNumber_smallDecimalPoint(self.h)

proc digitCount*(self: gen_qlcdnumber_types.QLCDNumber, ): cint =
  fcQLCDNumber_digitCount(self.h)

proc setDigitCount*(self: gen_qlcdnumber_types.QLCDNumber, nDigits: cint): void =
  fcQLCDNumber_setDigitCount(self.h, nDigits)

proc checkOverflow*(self: gen_qlcdnumber_types.QLCDNumber, num: float64): bool =
  fcQLCDNumber_checkOverflow(self.h, num)

proc checkOverflow*(self: gen_qlcdnumber_types.QLCDNumber, num: cint): bool =
  fcQLCDNumber_checkOverflowWithNum(self.h, num)

proc mode*(self: gen_qlcdnumber_types.QLCDNumber, ): cint =
  cint(fcQLCDNumber_mode(self.h))

proc setMode*(self: gen_qlcdnumber_types.QLCDNumber, mode: cint): void =
  fcQLCDNumber_setMode(self.h, cint(mode))

proc segmentStyle*(self: gen_qlcdnumber_types.QLCDNumber, ): cint =
  cint(fcQLCDNumber_segmentStyle(self.h))

proc setSegmentStyle*(self: gen_qlcdnumber_types.QLCDNumber, segmentStyle: cint): void =
  fcQLCDNumber_setSegmentStyle(self.h, cint(segmentStyle))

proc value*(self: gen_qlcdnumber_types.QLCDNumber, ): float64 =
  fcQLCDNumber_value(self.h)

proc intValue*(self: gen_qlcdnumber_types.QLCDNumber, ): cint =
  fcQLCDNumber_intValue(self.h)

proc sizeHint*(self: gen_qlcdnumber_types.QLCDNumber, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQLCDNumber_sizeHint(self.h))

proc display*(self: gen_qlcdnumber_types.QLCDNumber, str: string): void =
  fcQLCDNumber_display(self.h, struct_miqt_string(data: str, len: csize_t(len(str))))

proc display*(self: gen_qlcdnumber_types.QLCDNumber, num: cint): void =
  fcQLCDNumber_displayWithNum(self.h, num)

proc display*(self: gen_qlcdnumber_types.QLCDNumber, num: float64): void =
  fcQLCDNumber_display2(self.h, num)

proc setHexMode*(self: gen_qlcdnumber_types.QLCDNumber, ): void =
  fcQLCDNumber_setHexMode(self.h)

proc setDecMode*(self: gen_qlcdnumber_types.QLCDNumber, ): void =
  fcQLCDNumber_setDecMode(self.h)

proc setOctMode*(self: gen_qlcdnumber_types.QLCDNumber, ): void =
  fcQLCDNumber_setOctMode(self.h)

proc setBinMode*(self: gen_qlcdnumber_types.QLCDNumber, ): void =
  fcQLCDNumber_setBinMode(self.h)

proc setSmallDecimalPoint*(self: gen_qlcdnumber_types.QLCDNumber, smallDecimalPoint: bool): void =
  fcQLCDNumber_setSmallDecimalPoint(self.h, smallDecimalPoint)

proc overflow*(self: gen_qlcdnumber_types.QLCDNumber, ): void =
  fcQLCDNumber_overflow(self.h)

type QLCDNumberoverflowSlot* = proc()
proc miqt_exec_callback_QLCDNumber_overflow(slot: int) {.exportc.} =
  let nimfunc = cast[ptr QLCDNumberoverflowSlot](cast[pointer](slot))
  nimfunc[]()

proc onoverflow*(self: gen_qlcdnumber_types.QLCDNumber, slot: QLCDNumberoverflowSlot) =
  var tmp = new QLCDNumberoverflowSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQLCDNumber_connect_overflow(self.h, cast[int](addr tmp[]))

proc tr*(_: type gen_qlcdnumber_types.QLCDNumber, s: cstring, c: cstring): string =
  let v_ms = fcQLCDNumber_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qlcdnumber_types.QLCDNumber, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQLCDNumber_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc QLCDNumbersizeHint*(self: gen_qlcdnumber_types.QLCDNumber, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fQLCDNumber_virtualbase_sizeHint(self.h))

type QLCDNumbersizeHintProc* = proc(): gen_qsize_types.QSize
proc onsizeHint*(self: gen_qlcdnumber_types.QLCDNumber, slot: QLCDNumbersizeHintProc) =
  # TODO check subclass
  var tmp = new QLCDNumbersizeHintProc
  tmp[] = slot
  GC_ref(tmp)
  fcQLCDNumber_override_virtual_sizeHint(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QLCDNumber_sizeHint(self: ptr cQLCDNumber, slot: int): pointer {.exportc: "miqt_exec_callback_QLCDNumber_sizeHint ".} =
  var nimfunc = cast[ptr QLCDNumbersizeHintProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QLCDNumberevent*(self: gen_qlcdnumber_types.QLCDNumber, e: gen_qcoreevent_types.QEvent): bool =
  fQLCDNumber_virtualbase_event(self.h, e.h)

type QLCDNumbereventProc* = proc(e: gen_qcoreevent_types.QEvent): bool
proc onevent*(self: gen_qlcdnumber_types.QLCDNumber, slot: QLCDNumbereventProc) =
  # TODO check subclass
  var tmp = new QLCDNumbereventProc
  tmp[] = slot
  GC_ref(tmp)
  fcQLCDNumber_override_virtual_event(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QLCDNumber_event(self: ptr cQLCDNumber, slot: int, e: pointer): bool {.exportc: "miqt_exec_callback_QLCDNumber_event ".} =
  var nimfunc = cast[ptr QLCDNumbereventProc](cast[pointer](slot))
  let slotval1 = gen_qcoreevent_types.QEvent(h: e)


  let virtualReturn = nimfunc[](slotval1 )

  virtualReturn
proc QLCDNumberpaintEvent*(self: gen_qlcdnumber_types.QLCDNumber, param1: gen_qevent_types.QPaintEvent): void =
  fQLCDNumber_virtualbase_paintEvent(self.h, param1.h)

type QLCDNumberpaintEventProc* = proc(param1: gen_qevent_types.QPaintEvent): void
proc onpaintEvent*(self: gen_qlcdnumber_types.QLCDNumber, slot: QLCDNumberpaintEventProc) =
  # TODO check subclass
  var tmp = new QLCDNumberpaintEventProc
  tmp[] = slot
  GC_ref(tmp)
  fcQLCDNumber_override_virtual_paintEvent(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QLCDNumber_paintEvent(self: ptr cQLCDNumber, slot: int, param1: pointer): void {.exportc: "miqt_exec_callback_QLCDNumber_paintEvent ".} =
  var nimfunc = cast[ptr QLCDNumberpaintEventProc](cast[pointer](slot))
  let slotval1 = gen_qevent_types.QPaintEvent(h: param1)


  nimfunc[](slotval1)
proc QLCDNumberchangeEvent*(self: gen_qlcdnumber_types.QLCDNumber, param1: gen_qcoreevent_types.QEvent): void =
  fQLCDNumber_virtualbase_changeEvent(self.h, param1.h)

type QLCDNumberchangeEventProc* = proc(param1: gen_qcoreevent_types.QEvent): void
proc onchangeEvent*(self: gen_qlcdnumber_types.QLCDNumber, slot: QLCDNumberchangeEventProc) =
  # TODO check subclass
  var tmp = new QLCDNumberchangeEventProc
  tmp[] = slot
  GC_ref(tmp)
  fcQLCDNumber_override_virtual_changeEvent(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QLCDNumber_changeEvent(self: ptr cQLCDNumber, slot: int, param1: pointer): void {.exportc: "miqt_exec_callback_QLCDNumber_changeEvent ".} =
  var nimfunc = cast[ptr QLCDNumberchangeEventProc](cast[pointer](slot))
  let slotval1 = gen_qcoreevent_types.QEvent(h: param1)


  nimfunc[](slotval1)
proc QLCDNumberinitStyleOption*(self: gen_qlcdnumber_types.QLCDNumber, option: gen_qstyleoption_types.QStyleOptionFrame): void =
  fQLCDNumber_virtualbase_initStyleOption(self.h, option.h)
